[gd_scene load_steps=3 format=2]

[ext_resource path="res://HealParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://ParticleArc.gd" type="Script" id=2]

[node name="ParticleArc" type="Node2D"]
script = ExtResource( 2 )
trail_velocity_pixels_per_second = 600.0

[node name="HealParticles" parent="." instance=ExtResource( 1 )]
emitting = true
amount = 64
one_shot = false
explosiveness = 0.0
lifetime_randomness = 0.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 12.0
gravity = Vector2( 0, -49 )
angle = 180.0
angle_random = 1.0
scale_amount = 0.5
free_on_timeout = false

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
